[package]
name = "squid-archive-router"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-s3 = "0.21.0"
axum = "0.5.17"
blake3 = "1.3.1"
clap = { version = "4.0.18", features = ["derive"] }
hyper = "0.14.23"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
url = { version = "2.3.1", features = ["serde"] }
